1. Got a workaround for fitem widths going.
2. Improved the rendering of fitems under various conditions.
3. Removed fatfont.

22 Sept
1. Changed button on Check fonts form to 'Close' -- makes more sense now.

24 Sept
1. Major update of help file and graphics.
2. Trying to fancy-up the info label in the font-view. So far no luck.
3. Got the label going! Made a custom control.

25 Sept
1. Improved the drawing of fitmaps and gradients. Still have some precalcing of colours to do.
2. Tweaked the images and icons.

26 Sept
1. Added a sunken border to font view -- better visual containment I think.

27 Sept
More gui polishing done.
Strings changed -- PO files will be broken :(

28 Sept
1. Seems PO files are quite robust -- the strings are marked as 'fuzzy' and should still translate fairly well.
2. Today I will make a 'release' branch on the SVN and get the tarball for 0.4.2 going.

28 Sept : Feedback from Kartik
1. Removed the Version tag from .desktop file -- it's not required.
2. Removed the .png from the icon key in .desktop file -- it's not wanted.
3. Some confusion as to whether fonty will run 100% on Python 2.5, I developed this year on 2.6
4. Version bumped to 0.4.2.1

29 Sept
1. Working on a way to scan the font images and remove that leading blank space on certain fonts. Done, and included an override in settings dialog.

30 Sept
1. Spent the *ENTIRE* day fighting the damn splitter and sizers. Not really sure why or how, but I got it working okay. I also don't really know what broke from last version! 

1 Oct 2009
1. Renamed 'fp' script to 'start_fontypython' - had to edit a bunch of files. 
1.1 It turns out that fonty has been running without the segfault catcher all along. This should be remedied as of now. Backported fix to 0.4.2.x as well.
2. Taking-over the maintenance of the man page. I will leave it in the root of the tarball and Kartik will deal with it from there. Backported to 0.4.2.x

2 Oct
1. Spot changes. Made label above font views look better.

