@@ -91,10 +91,12 @@ class TargetPogChooser(wx.Panel):
 		self.sizer = wx.BoxSizer(wx.VERTICAL)		 
 		self.iconandtext = wx.BoxSizer(wx.HORIZONTAL)
 		self.iconandtext.Add(self.icon, 0, wx.TOP | wx.BOTTOM, border = 4)
-		self.iconandtext.Add(self.textInfo, 1, wx.EXPAND | wx.TOP | wx.BOTTOM | wx.LEFT, border = 4)
+		#self.iconandtext.Add(self.textInfo, 1, wx.EXPAND | wx.TOP | wx.BOTTOM | wx.LEFT, border = 4)
+		self.iconandtext.Add(self.textInfo, 1, wx.EXPAND | wx.ALL, border = 4)
 		self.sizer.Add(self.iconandtext, 0, wx.EXPAND)
-		self.sizer.Add(self.buttNoPog, 0, wx.EXPAND)	  
+		#self.sizer.Add(self.buttNoPog, 0, wx.EXPAND)	  
 		self.sizer.Add(self.pogTargetlist, 1, wx.EXPAND)
+		self.sizer.Add(self.buttNoPog, 0, wx.EXPAND | wx.BOTTOM | wx.TOP, border=5)	  
 		self.sizer.Add(self.buttInstall, 0, wx.EXPAND) 
 		self.sizer.Add(self.buttUninstall, 0, wx.EXPAND) 
 		self.sizer.Add(self.buttNew, 0, wx.EXPAND) 
